# ai-flow-architect

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  IMAGE_SPEC.md  LICENSE  MANIFEST.in  README.md  README_CN.md  SECURITY.md  action.yml  example_output.txt  example_requirement.txt  mcp.json  mcp.json.example  pyproject.toml  requirements.txt  server.json  setup.py  smithery.yaml  test_mvp.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ai-audit.yml.example  audit-pr.yml  audit.yml  tests.yml
docs/: DIRECTION.md  SPEC.md  flow-architect.md  getting_started.md  index.html  playground.html  playground_20260529_210539_785.html  sample-report.html
docs/csdn-article/: README.md  ai-flow-architect-csdn.md
docs/img/: trustreport-cli.html
examples/: basic_usage.py
integrations/: README.md  cli.md  crewai.md  langchain.md  openai-sdk.md
npx-demo/: README.md  index.js  package.json
schemas/: trust-report-v1.schema.json
scripts/: action_entry.py  benchmark.py  demo_video.py
skills/trust-engine/: SKILL.md
src/ai_flow_architect/: __init__.py  api.py  cli.py  mcp_server.py  playground.html  playground_server.py
src/ai_flow_architect/brains/: __init__.py  brain_blind.py  brain_one.py  brain_opponent.py  brain_two.py
src/ai_flow_architect/cli/: __init__.py  cmd_attack.py  cmd_audit.py  cmd_config.py  cmd_cross_examine.py  cmd_example.py  cmd_health.py  cmd_init.py  cmd_mistakes.py  cmd_models.py  cmd_trace.py  render.py
src/ai_flow_architect/config/: cross_family.py  default.yaml  models.yaml
src/ai_flow_architect/config/conscience/: test_bank.yaml
src/ai_flow_architect/core/: __init__.py  architect.py  cache.py  context.py  scheduler.py
src/ai_flow_architect/engine/: __init__.py  arsenal_attack.py  arsenal_cross_examine.py  arsenal_trace.py  complexity_router.py  conscience.py  evidence_db.py  local_checker.py  logging_config.py  trust_engine.py  trust_report.py
src/ai_flow_architect/experts/: __init__.py  base.py  creative.py  evaluator.py  programmer.py  reviewer.py
src/ai_flow_architect/templates/: __init__.py  report.html
src/ai_flow_architect/tools/: __init__.py  base.py  file_tools.py
src/ai_flow_architect/utils/: __init__.py  api_pool.py  arsenal_client.py  compressor.py  decision_recorder.py  llm_client.py  token_counter.py  validator.py
src/audison/: __init__.py  api.py  mcp_server.py  playground.html  playground_server.py
src/audison/brains/: __init__.py  brain_blind.py  brain_two.py
src/audison/cli/: __init__.py  cmd_audit.py  cmd_config.py  cmd_example.py  cmd_health.py  cmd_init.py  cmd_mistakes.py  cmd_models.py  render.py
src/audison/config/: default.yaml  model_resolver.py  models.yaml
src/audison/config/attack_strategies/: core.yaml  schema.yaml
src/audison/core/: __init__.py  architect.py  cache.py  context.py  scheduler.py
src/audison/engine/: audit_context.py  complexity_router.py  conscience.py  evidence_db.py  trust_engine.py  trust_report.py
src/audison/experts/: __init__.py  creative.py
src/audison/templates/: report.html
src/audison/utils/: api_pool.py  token_counter.py
tests/: test_cli_e2e.py  test_evidence_db.py  test_trust_engine_degradation.py  test_trust_report_serialization.py
tests/unit/: test_adversarial_fallback.py  test_api_pool.py  test_architect.py  test_arsenal_attack.py  test_arsenal_cross_examine.py  test_arsenal_trace.py  test_basic.py  test_blind_review.py  test_cache.py  test_cache_domain_entities.py  test_complexity_router.py  test_conscience.py  test_context.py  test_cross_family.py  test_html_anchors.py  test_local_checker.py  test_mcp_server.py  test_multi_arbitration.py  test_scheduler.py  test_shadow_cold_start.py  test_shadow_matching.py  test_tools.py  test_trust_engine.py  test_trust_report.py  test_uncertainty_regression.py
