[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audison"
version = "2.3.0"
description = "AI proposes. You decide. — Adversarial AI workflow engine with built-in quality arbitration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "盛鑫", email = "2709786902@qq.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "ai",
    "workflow",
    "multi-model",
    "quality-arbitration",
    "anti-hallucination",
    "dual-brain",
    "human-in-the-loop",
    "adversarial",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "shortuuid>=1.0.0",
    "typing-extensions>=4.8.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pre-commit>=3.3.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
cache = [
    "redis>=5.0.0",
    "diskcache>=5.6.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
html = [
    "jinja2>=3.1.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "redis>=5.0.0",
    "diskcache>=5.6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/wdnmd1265/audison"
Documentation = "https://github.com/wdnmd1265/audison#readme"
Repository = "https://github.com/wdnmd1265/audison"
"Bug Tracker" = "https://github.com/wdnmd1265/audison/issues"
npm = "https://www.npmjs.com/package/audison-demo"

[project.scripts]
audison = "audison.cli:main"
audison-mcp = "audison.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"audison" = [
    "templates/*.html",
    "config/*.yaml",
    "config/attack_strategies/*.yaml",
    "config/conscience/*.yaml",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["audison"]
known_third_party = ["openai", "anthropic", "pydantic", "redis", "click", "typer"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[project.entry-points."audison.experts"]
base = "audison.experts.base:BaseExpert"
creative = "audison.experts.creative:CreativeExpert"
evaluator = "audison.experts.evaluator:EvaluatorExpert"
programmer = "audison.experts.programmer:ProgrammerExpert"
reviewer = "audison.experts.reviewer:ReviewerExpert"